Update print statement from 'Hello' to 'Goodbye'

--- a/JJK.html
+++ b/JJK.html
@@ -103,10 +103,13 @@
     
 
     <hr>
-
+<marquee behavior="scroll" direction="right">
+        <b>Thanks For Vising This Jujutsu Kaisen World!!</b>
+    </marquee>
     <footer>
         <p>&copy; 2026 Jujutsu Kaisen Fan Page</p>
     </footer>
 
 </body>
 </html>
+
